# SNS-Hack

./: .env  .env.local  .gitignore  FE.md  README.md  TODO.md  TODO_APIS.md  WHERETOUSE.md  assessment_triggers.py  assessments.py  auth.py  db.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/instructions/: convex.instructions.md
agent/: __init__.py  prompts.py  req.txt  root_agent.py  utils.py
agent/subagents/: act_agent.py  ant_detection_sub_agent.py  assessment_aware_agent.py  cbt_agent.py  crisis_managment_agent.py  dbt_agent.py  fallback_agent.py  memory_module.py
convex/: myFunctions.ts
routes/: goals_and_soundscapes.md  mindful_routes.py  sleep_routes.py  stree_docs.md
schemas/: __init__.py  mindful_schemas.py  stress.py
scripts/: generate_mock_data.py
services/: __init__.py  mood_tracker_service.py
src/: App.tsx  auth.py  db.py  load_mock_data.py  main.py  mock_data.json
src/agent/: prompts.py  root_agent.py
src/agent/subagents/: act_agent.py  ant_detection_sub_agent.py  assessment_aware_agent.py  cbt_agent.py  dbt_agent.py  (+3 more)
src/components/: GoogleLogo.tsx  SignIn.tsx
src/routes/: mindful_routes.py  mood_routes.py  stress_routes.py
src/schemas/: __init__.py  mindful_schemas.py  mood_tracker_schema.py  sleep.py
src/services/: __init__.py  mindful_service.py  mood_tracker_service.py  sleep_service.py  stress_service.py
tests/: conftest.py  stubs.py  test_assessment_triggers.py  test_assessments.py  test_mindful_routes.py  test_mood_routes.py  test_sleep_routes.py
(+3 files in other folders)
